# silent

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  PLAN.md  TODO.md  deny.toml  lcov.info  readme.md
.claude/skills/: silent-middleware.md  silent-openapi.md  silent-project-scaffold.md  silent-route-handler.md  silent-testing.md  silent-worker.md
.config/: nextest.toml
.github/codeql/: HANDLING_FALSE_POSITIVES.md  README.md  codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml
benchmark/: Cargo.toml  README.md  criterion.toml
benchmark/benches/: route_benchmark.rs
benchmark/scripts/: run_bombardier.sh
benchmark/src/: main.rs
docs/: cloudflare-worker.md  extractors-guide.md  extractors.md  metrics-usage.md  net-server-design.md  openapi.md  quality-metrics.md  quic-cert-rotation.md  quic-interop-matrix.md  quic-ops.md  quic-transport.md  quic-webtransport.md  requirements.md  runtime-agnostic-usage.md  static-serving.md  swagger-dev.md  testing.md  tokio-removal-plan.md  trait_optimization_analysis.md  ws-runtime-agnostic.md
docs/examples/: runtime-agnostic-minimal.md  runtime-agnostic-smol-minimal.md
docs/guide/: cloudflare-worker.md
docs/requirements/: async-runtime-compatibility.md  cloudflare-workers.md  middleware-onion-model.md  perf-roadmap.md  quic-example.md  route-append-merge.md  routing-oauth2-405.md  swagger-p0.md  xtask-bench-readiness.md
examples/candle_whisper/: Cargo.toml
examples/cloudflare-worker/: Cargo.toml  wrangler.toml
examples/cloudflare-worker-ws-chat/: Cargo.toml  wrangler.toml
examples/cloudflare-worker-ws-chat/src/: lib.rs
examples/cloudflare-worker/src/: lib.rs  route.rs
examples/configs/src/: main.rs
examples/cookies/src/: main.rs
examples/cors/src/: main.rs
examples/custom_tokio_listener/: Cargo.toml
examples/custom_tokio_listener/src/: main.rs
examples/extractors/: Cargo.toml
examples/file_server_advanced/: Cargo.toml  file_server_advanced.md
examples/grpc/: Cargo.toml  build.rs
examples/grpc/src/: main.rs
examples/grpc_h2c/: Cargo.toml  build.rs
examples/grpc_h2c/src/: main.rs
examples/grpc_streaming/: Cargo.toml  build.rs
examples/grpc_streaming/src/: main.rs
examples/jwt_auth/: Cargo.toml  README.md
examples/jwt_auth/src/: main.rs
examples/metrics-example/: Cargo.toml  README.md  prometheus.yml
examples/middleware_layered/: Cargo.toml
examples/net_server_basic/: Cargo.toml
examples/net_server_custom_protocol/: Cargo.toml
examples/openapi-test/: Cargo.toml
examples/quic/: Cargo.toml  README.md
examples/quic/src/: main.rs
examples/rate_limiter/: Cargo.toml  README.md
examples/runtime_agnostic_smol_minimal/: Cargo.toml
examples/tls/: Cargo.toml
examples/tls/src/: main.rs
examples/todo/: Cargo.toml
examples/tower-compat/: Cargo.toml
examples/websocket/: Cargo.toml
examples/websocket-chat/: Cargo.toml
examples/websocket/src/: main.rs
examples/websocket_asyncio_smol/: Cargo.toml
examples/ws_injector/: Cargo.toml
examples/ws_injector/src/: main.rs
rfcs/: 2025-10-01-net-server-decoupling.md
scripts/: coverage.sh  quality-check.sh
silent/: Cargo.toml
silent-openapi/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs
silent-openapi-macros/: Cargo.toml
silent-openapi-macros/src/: lib.rs
silent-openapi/examples/: security_example.rs  simple_example.rs  user_api.rs
silent-openapi/src/: doc.rs  embedded.rs  error.rs  handler.rs  lib.rs  middleware.rs  redoc.rs  route.rs  schema.rs  ui_html.rs
silent/benches/: router.rs
silent/src/: lib.rs  prelude.rs
silent/src/configs/: mod.rs
silent/src/cookie/: cookie_ext.rs  middleware.rs  mod.rs
silent/src/cookie/tests/: cookie_ext.rs  mod.rs
silent/src/core/: adapt.rs  connection.rs  form.rs  into_response.rs  listener.rs  mod.rs  next.rs  path_param.rs  remote_addr.rs  req_body.rs  request.rs  res_body.rs  response.rs  serde.rs  socket_addr.rs  stream.rs
silent/src/core/serde/: mod.rs  multipart.rs
silent/src/error/: mod.rs
silent/src/extractor/: from_request.rs  mod.rs  types.rs
silent/src/grpc/: handler.rs  register.rs  service.rs  utils.rs
silent/src/handler/: handler_fn.rs  handler_trait.rs  handler_wrapper.rs  handler_wrapper_static.rs  mod.rs
silent/src/handler/static/: compression.rs  directory.rs  handler.rs  mod.rs  options.rs
silent/src/middleware/: middleware_trait.rs  mod.rs  tower_compat.rs
silent/src/middleware/middlewares/: compression.rs  cors.rs  exception_handler.rs  jwt_auth.rs  logger.rs  mod.rs  rate_limiter.rs  request_id.rs  request_time_logger.rs  timeout.rs
silent/src/protocol/: mod.rs
silent/src/protocol/hyper_http/: mod.rs
silent/src/quic/: connection.rs  core.rs  echo.rs  listener.rs  middleware.rs  mod.rs  service.rs
silent/src/route/: handler_append.rs  handler_match.rs  mod.rs  root.rs  route_service.rs  route_tree.rs  worker.rs
silent/src/runtime/: mod.rs
silent/src/scheduler/: middleware.rs  mod.rs  traits.rs
silent/src/scheduler/storage/: mysql.rs  traits.rs
silent/src/security/: pbkdf2.rs
silent/src/server/: config.rs  connection.rs  connection_service.rs  hyper_service.rs  listener.rs  metrics.rs  mod.rs  net_server.rs  route_connection.rs  route_service.rs  stream.rs  tls.rs
silent/src/server/protocol/hyper_http/: hyper_service.rs  mod.rs
silent/src/server/quic/: connection.rs  core.rs  echo.rs  listener.rs  middleware.rs  mod.rs  service.rs
silent/src/service/: connection_service.rs  hyper_service.rs  listener.rs  mod.rs  net_server.rs  route_service.rs  serve.rs  stream.rs  tls.rs
silent/src/service/transport/: async_io.rs  hyper_tokio.rs  mod.rs
silent/src/session/: middleware.rs  session_ext.rs
silent/src/sse/: event.rs  keep_alive.rs  mod.rs  reply.rs
silent/src/templates/: middleware.rs
silent/src/testing/: client.rs  mod.rs  response.rs
silent/src/ws/: handler.rs  handler_wrapper_websocket.rs  message.rs  mod.rs  route.rs  types.rs  upgrade.rs  websocket.rs  websocket_handler.rs
silent/tests/: integration.rs  net_server.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+31 files in other folders)
