[package]
authors.workspace = true
categories = ["web-programming"]
description = "OpenAPI 3.0 support for Silent web framework"
edition.workspace = true
homepage.workspace = true
keywords = ["silent", "openapi", "swagger", "web", "api"]
license.workspace = true
name = "silent-openapi"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Silent框架依赖
silent = { path = "../silent", version = "2" }

# OpenAPI相关依赖
utoipa = { version = "5", features = ["chrono", "uuid"] }

# 基础依赖
async-trait = "0.1"
http = "1.0"
mime = "0.3"
once_cell = "1.19"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
silent-openapi-macros = { path = "../silent-openapi-macros", version = "2" }
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }

# 可选的模式和扩展功能
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", optional = true, features = ["v4", "serde"] }

[features]
default = []

# 扩展功能特性
uuid = ["dep:uuid", "utoipa/uuid"]

# 开发时工具
[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "user_api"
path = "examples/user_api.rs"
