[package]
authors.workspace = true
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]
description = """
Silent Web Framework
"""
documentation = "https://docs.rs/silent/"
edition.workspace = true
homepage.workspace = true
keywords = ["web", "web-framework"]
license.workspace = true
name = "silent"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
admin = ["server", "sse", "template", "session"]
cookie = ["dep:cookie"]
default = ["server"]
full = [
    "admin",
    "server",
    "multipart",
    "upgrade",
    "sse",
    "security",
    "static",
    "session",
    "cookie",
    "template",
    "scheduler",
    "grpc",
    "tls",
    "quic",
    "metrics",
]
multipart = [
    "server",
    "dep:async-fs",
    "dep:multer",
    "dep:multimap",
    "dep:tempfile",
    "dep:textnonce",
]
security = ["dep:argon2", "dep:pbkdf2", "dep:aes-gcm", "dep:aes", "dep:rsa"]
server = [
    "tokio/fs",
    "tokio/net",
    "tokio/rt-multi-thread",
    "tokio/signal",
    "tokio/macros",
]
session = ["cookie", "dep:async-session", "dep:async-lock"]
sse = ["dep:pin-project"]
static = ["server", "dep:urlencoding", "dep:async-compression", "dep:async-fs"]
template = ["dep:tera"]
upgrade = [
    "dep:async-tungstenite",
    "dep:async-lock",
    "dep:async-global-executor",
    "dep:async-channel",
]
worker = ["dep:worker", "tokio/sync"]
grpc = [
    "upgrade",
    "dep:tonic",
    "dep:pin-project-lite",
    "dep:pin-project",
    "dep:tokio-stream",
    "dep:async-lock",
    "dep:async-global-executor",
]
scheduler = [
    "server",
    "dep:cron",
    "dep:async-lock",
    "dep:async-global-executor",
]
test = ["tokio/macros", "tokio/rt"]
tls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:rustls-pki-types",
    "server",
]
quic = [
    "tls",
    "dep:quinn",
    "dep:h3",
    "dep:h3-quinn",
    "dep:scru128",
    "dep:rand",
    "dep:tokio-stream",
]
metrics = ["dep:metrics"]

[dependencies]
# Basic dependencies
anyhow = "1"
async-lock = { version = "3", optional = true }
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
futures = "0.3"
headers = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
metrics = { workspace = true, optional = true }
memchr = "2"
mime = "0.3"
once_cell = { version = "1", default-features = false, features = ["std"] }
smallvec = "1"
pin-project = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_html_form = "0.4"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", optional = true }
tokio-stream = { version = "0.1", features = ["net"], optional = true }
async-tungstenite = { version = "0.32", optional = true, default-features = false, features = [
    "tokio-runtime",
] }
tokio-util = { version = "0.7", features = ["compat"] }
async-io = { version = "2" }
async-fs = { version = "2", optional = true }
async-global-executor = { version = "3", optional = true }
async-channel = { version = "2", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
url = "2"
urlencoding = { version = "2", optional = true }
uuid = "1"
async-compression = { version = "0.4", optional = true, features = [
    "futures-io",
    "brotli",
    "gzip",
] }

# Scheduler
cron = { version = "0.15", optional = true }

# Multipart
multer = { version = "3", optional = true }
multimap = { version = "0.10", features = ["serde"], optional = true }
tempfile = { version = "3", optional = true }
textnonce = { version = "1", optional = true }

# Template
tera = { version = "1", optional = true }

# Session
async-session = { version = "3", optional = true }
cookie = { version = "0.18", features = [
    "secure",
    "percent-encode",
], optional = true }

# Grpc
tonic = { version = "0.14", optional = true, default-features = false, features = [
    "codegen",
] }

# Security
aes = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
mime_guess = "2"
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
rsa = { version = "0.9", optional = true }

# tls
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "logging",
    "tls12",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
scru128 = { version = "3", optional = true, package = "scru128" }
rand = { version = "0.9", optional = true }

# Cloudflare Workers
worker = { version = "0.7", optional = true }

# Benchmarks
[dev-dependencies]
criterion = { version = "0.8", features = ["async", "async_tokio"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
