[package]
name = "example-cloudflare-worker-ws-chat"
version = "0.1.0"
edition.workspace = true
publish = false
description = "WebSocket chat running on Cloudflare Workers (wasm)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.6"
console_error_panic_hook = "0.1"
once_cell = "1"
async-lock = "2"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
