[package]
name = "example-cloudflare-worker"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
publish = false
description = "Silent route running on Cloudflare Workers"

[lib]
crate-type = ["cdylib"]


[dependencies]
worker = "0.8.0"
console_error_panic_hook = "0.1"
serde_json = "1"
silent = { path = "../../silent", default-features = false, features = [
    "worker",
] }
