[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "example-grpc-h2c"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
async-trait.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
prost.workspace = true
silent = {path = "../../silent", features = ["grpc"]}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tonic-prost.workspace = true
tonic.workspace = true
tower.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
