[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "example-grpc-streaming"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
async-trait.workspace = true
h2.workspace = true
prost.workspace = true
silent = {path = "../../silent", features = ["grpc"]}
tokio = {workspace = true, features = ["macros", "rt-multi-thread"]}
tokio-stream.workspace = true
tonic-prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
