[package]
name = "jwt_auth_example"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
silent = { path = "../../silent", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
