[package]
name = "example-quic"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "1"
silent = { path = "../../silent", features = ["quic"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23" }
