[package]
name = "example-quic"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
silent = { path = "../../silent", features = ["server", "quic"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23" }
