[package]
name = "example-tls"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent", features = ["tls"] }
rustls = { version = "0.23" }
futures-rustls = { version = "0.26" }
async-global-executor = "2"
