[package]
name = "example-websocket"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent", features = ["upgrade"] }
async-lock = "3"
async-channel = "2"
