[package]
name = "ws-injector"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
silent = { path = "../../silent", default-features = false, features = ["upgrade"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
